--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+    <div class="menu">
+        
+    </div>
+    <div class="d-grid gap-2 d-md-block">
+        <button class="btn btn-primary" [routerLink]="['/new']" routerLinkActive="router-link-active" >Formulario</button>
+        <button class="btn btn-primary" [routerLink]="['/list']" routerLinkActive="router-link-active" >Lista empleado</button>
+      </div>
     <div class="row">
         <div class="col-12">
             <router-outlet></router-outlet>
